<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:nestedScrollingEnabled="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.diego.listatareas.fragments.UpdateFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- Datos de la meta -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">
            <!-- Titulo-->
            <EditText
                android:id="@+id/titulo_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="false"
                android:hint="@string/title"
                android:inputType="text"
                android:maxLength="55"
                android:maxLines="1"
                android:minLines="1"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <!-- Descripción -->
            <EditText
                android:id="@+id/descripcion_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titulo_input"
                android:layout_centerHorizontal="true"
                android:hint="@string/description"
                android:maxLength="256"
                android:nestedScrollingEnabled="true"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <!-- Etiqueta Fecha -->
            <TextView
                android:id="@+id/fecha_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/descripcion_input"
                android:paddingTop="16dp"
                android:text="@string/date"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />

            <!-- Fecha -->
            <TextView
                android:id="@+id/fecha_ejemplo_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fecha_text"
                android:text="@string/dateExample"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <!-- Categoría -->
            <Spinner
                android:id="@+id/categoria_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/categoria_texto"
                android:entries="@array/entradas_categoria"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <!-- Etiqueta Categoría -->
            <TextView
                android:id="@+id/categoria_texto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/fecha_ejemplo_text"
                android:paddingTop="16dp"
                android:text="@string/category"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />

            <!-- Etiqueta Prioridad -->
            <TextView
                android:id="@+id/prioridad_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/categoria_spinner"
                android:paddingTop="16dp"
                android:text="@string/priority"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />

            <!-- Prioridad -->
            <Spinner
                android:id="@+id/prioridad_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/prioridad_text"
                android:entries="@array/entradas_prioridad" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
